--- a/kmtmg/en.lproj/MyDocument.xib
+++ b/kmtmg/en.lproj/MyDocument.xib
@@ -41,7 +41,7 @@
 				<int key="NSWindowStyleMask">15</int>
 				<int key="NSWindowBacking">2</int>
 				<string key="NSWindowRect">{{133, 235}, {500, 493}}</string>
-				<int key="NSWTFlags">-529005568</int>
+				<int key="NSWTFlags">-1602747392</int>
 				<string key="NSWindowTitle">Window</string>
 				<string key="NSWindowClass">MyWindow</string>
 				<string key="NSViewClass">View</string>
@@ -71,6 +71,7 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{0, 418}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="124652779"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="374602727">
@@ -96,6 +97,7 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{0, 450}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="438582917"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="550676989">
@@ -117,6 +119,7 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{32, 418}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="271182511"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="88099234">
@@ -138,6 +141,7 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{32, 466}, {32, 17}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="439273918"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="483550541">
@@ -163,6 +167,7 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{32, 450}, {32, 17}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="221403021"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="475798557">
@@ -181,23 +186,25 @@
 														</object>
 														<object class="NSCustomView" id="271182511">
 															<reference key="NSNextResponder" ref="771364648"/>
-															<int key="NSvFlags">270</int>
+															<int key="NSvFlags">266</int>
 															<string key="NSFrame">{{64, 419}, {424, 64}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="335001281"/>
 															<string key="NSClassName">MyHScrollView</string>
 														</object>
 														<object class="NSCustomView" id="335001281">
 															<reference key="NSNextResponder" ref="771364648"/>
-															<int key="NSvFlags">284</int>
+															<int key="NSvFlags">276</int>
 															<string key="NSFrameSize">{64, 419}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="245208161"/>
 															<string key="NSClassName">MyVScrollView</string>
 														</object>
 														<object class="NSScrollView" id="245208161">
 															<reference key="NSNextResponder" ref="771364648"/>
-															<int key="NSvFlags">286</int>
+															<int key="NSvFlags">274</int>
 															<array class="NSMutableArray" key="NSSubviews">
 																<object class="NSClipView" id="115432387">
 																	<reference key="NSNextResponder" ref="245208161"/>
@@ -209,20 +216,23 @@
 																			<array class="NSMutableArray" key="NSSubviews">
 																				<object class="NSCustomView" id="465732959">
 																					<reference key="NSNextResponder" ref="615534696"/>
-																					<int key="NSvFlags">286</int>
+																					<int key="NSvFlags">274</int>
 																					<string key="NSFrameSize">{413, 408}</string>
 																					<reference key="NSSuperview" ref="615534696"/>
+																					<reference key="NSWindow"/>
 																					<reference key="NSNextKeyView" ref="303982887"/>
 																					<string key="NSClassName">MyView</string>
 																				</object>
 																			</array>
 																			<string key="NSFrameSize">{413, 408}</string>
 																			<reference key="NSSuperview" ref="115432387"/>
+																			<reference key="NSWindow"/>
 																			<reference key="NSNextKeyView" ref="465732959"/>
 																		</object>
 																	</array>
 																	<string key="NSFrameSize">{413, 408}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="615534696"/>
 																	<reference key="NSDocView" ref="615534696"/>
 																	<object class="NSColor" key="NSBGColor" id="407048720">
@@ -241,6 +251,7 @@
 																	<int key="NSvFlags">256</int>
 																	<string key="NSFrame">{{413, 0}, {11, 408}}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="1031482229"/>
 																	<int key="NSsFlags">256</int>
 																	<reference key="NSTarget" ref="245208161"/>
@@ -253,6 +264,7 @@
 																	<int key="NSvFlags">256</int>
 																	<string key="NSFrame">{{0, 408}, {413, 11}}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="276230304"/>
 																	<int key="NSsFlags">257</int>
 																	<reference key="NSTarget" ref="245208161"/>
@@ -262,6 +274,7 @@
 															</array>
 															<string key="NSFrame">{{64, 0}, {424, 419}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="115432387"/>
 															<int key="NSsFlags">48</int>
 															<reference key="NSVScroller" ref="303982887"/>
@@ -271,6 +284,7 @@
 													</array>
 													<string key="NSFrameSize">{488, 483}</string>
 													<reference key="NSSuperview" ref="969414390"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="858913219"/>
 													<string key="NSClassName">NSView</string>
 												</object>
@@ -283,6 +297,7 @@
 															<int key="NSvFlags">258</int>
 															<string key="NSFrame">{{0, 128}, {488, 32}}</string>
 															<reference key="NSSuperview" ref="276230304"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="689508025"/>
 															<string key="NSClassName">NSView</string>
 														</object>
@@ -299,6 +314,7 @@
 																			<int key="NSvFlags">274</int>
 																			<string key="NSFrameSize">{486, 126}</string>
 																			<reference key="NSSuperview" ref="463231561"/>
+																			<reference key="NSWindow"/>
 																			<reference key="NSNextKeyView" ref="12926121"/>
 																			<string key="NSMinGridSize">{0, 0}</string>
 																			<string key="NSMaxGridSize">{0, 0}</string>
@@ -318,6 +334,7 @@
 																	</array>
 																	<string key="NSFrame">{{1, 1}, {486, 126}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="906795404"/>
 																	<reference key="NSDocView" ref="906795404"/>
 																	<reference key="NSBGColor" ref="407048720"/>
@@ -328,6 +345,7 @@
 																	<int key="NSvFlags">-2147483392</int>
 																	<string key="NSFrame">{{234, 1}, {15, 143}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="167522541"/>
 																	<reference key="NSTarget" ref="689508025"/>
 																	<string key="NSAction">_doScroller:</string>
@@ -339,6 +357,7 @@
 																	<int key="NSvFlags">-2147483392</int>
 																	<string key="NSFrame">{{1, 144}, {233, 15}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="452081562"/>
 																	<int key="NSsFlags">1</int>
 																	<reference key="NSTarget" ref="689508025"/>
@@ -348,6 +367,7 @@
 															</array>
 															<string key="NSFrameSize">{488, 128}</string>
 															<reference key="NSSuperview" ref="276230304"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="463231561"/>
 															<int key="NSsFlags">562</int>
 															<reference key="NSVScroller" ref="12926121"/>
@@ -357,18 +377,21 @@
 													</array>
 													<string key="NSFrame">{{0, 493}, {488, 0}}</string>
 													<reference key="NSSuperview" ref="969414390"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="24092058"/>
 													<string key="NSClassName">NSView</string>
 												</object>
 											</array>
 											<string key="NSFrameSize">{488, 493}</string>
 											<reference key="NSSuperview" ref="1020549599"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="771364648"/>
 											<int key="NSDividerStyle">3</int>
 										</object>
 									</array>
 									<string key="NSFrameSize">{488, 493}</string>
 									<reference key="NSSuperview" ref="532050384"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="969414390"/>
 									<string key="NSClassName">NSView</string>
 								</object>
@@ -381,17 +404,20 @@
 											<int key="NSvFlags">274</int>
 											<string key="NSFrameSize">{2, 493}</string>
 											<reference key="NSSuperview" ref="452081562"/>
+											<reference key="NSWindow"/>
 											<string key="NSClassName">NSView</string>
 										</object>
 									</array>
 									<string key="NSFrame">{{498, 0}, {2, 493}}</string>
 									<reference key="NSSuperview" ref="532050384"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="510901244"/>
 									<string key="NSClassName">NSView</string>
 								</object>
 							</array>
 							<string key="NSFrameSize">{500, 493}</string>
 							<reference key="NSSuperview" ref="568628114"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1020549599"/>
 							<bool key="NSIsVertical">YES</bool>
 							<int key="NSDividerStyle">3</int>
@@ -399,6 +425,7 @@
 					</array>
 					<string key="NSFrameSize">{500, 493}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="532050384"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
@@ -421,13 +448,11 @@
 							<int key="NSvFlags">274</int>
 							<string key="NSFrameSize">{202, 136}</string>
 							<reference key="NSSuperview" ref="397099299"/>
-							<reference key="NSWindow"/>
 							<string key="NSClassName">MyCursorView</string>
 						</object>
 					</array>
 					<string key="NSFrameSize">{202, 136}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="186698734"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
@@ -441,7 +466,7 @@
 				<string key="NSWindowClass">MyLayerWindow</string>
 				<nil key="NSViewClass"/>
 				<object class="NSView" key="NSWindowView" id="953402551">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSCustomView" id="668234819">
@@ -449,13 +474,10 @@
 							<int key="NSvFlags">274</int>
 							<string key="NSFrameSize">{169, 125}</string>
 							<reference key="NSSuperview" ref="953402551"/>
-							<reference key="NSWindow"/>
 							<string key="NSClassName">MyRubberView</string>
 						</object>
 					</array>
 					<string key="NSFrameSize">{169, 125}</string>
-					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="668234819"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
@@ -539,43 +561,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">oLayer</string>
-						<reference key="source" ref="512844837"/>
-						<reference key="destination" ref="464546253"/>
-					</object>
-					<int key="connectionID">100270</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">oLayerWindow</string>
-						<reference key="source" ref="512844837"/>
-						<reference key="destination" ref="456788506"/>
-					</object>
-					<int key="connectionID">100279</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">oCursorView</string>
 						<reference key="source" ref="512844837"/>
 						<reference key="destination" ref="186698734"/>
 					</object>
 					<int key="connectionID">100280</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">oCursorWindow</string>
-						<reference key="source" ref="512844837"/>
-						<reference key="destination" ref="464546253"/>
-					</object>
-					<int key="connectionID">100281</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">oLayerView</string>
-						<reference key="source" ref="512844837"/>
-						<reference key="destination" ref="668234819"/>
-					</object>
-					<int key="connectionID">100282</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -592,14 +582,6 @@
 						<reference key="destination" ref="221403021"/>
 					</object>
 					<int key="connectionID">100285</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">oEffectIgnore</string>
-						<reference key="source" ref="512844837"/>
-						<reference key="destination" ref="124652779"/>
-					</object>
-					<int key="connectionID">100286</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -672,6 +654,22 @@
 						<reference key="destination" ref="438582917"/>
 					</object>
 					<int key="connectionID">100299</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">oRubberWindow</string>
+						<reference key="source" ref="512844837"/>
+						<reference key="destination" ref="456788506"/>
+					</object>
+					<int key="connectionID">100312</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">oCursorWindow</string>
+						<reference key="source" ref="512844837"/>
+						<reference key="destination" ref="464546253"/>
+					</object>
+					<int key="connectionID">100313</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -1123,7 +1121,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100308</int>
+			<int key="maxID">100313</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
