--- a/kmtmg/en.lproj/MyDocument.xib
+++ b/kmtmg/en.lproj/MyDocument.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
+		<int key="IBDocument.SystemTarget">1070</int>
+		<string key="IBDocument.SystemVersion">11C40</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1934</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.AppKitVersion">1138.16</string>
+		<string key="IBDocument.HIToolboxVersion">567.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			<string key="NS.object.0">1934</string>
@@ -48,6 +48,7 @@
 				<string key="NSWindowTitle">Window</string>
 				<string key="NSWindowClass">MyWindow</string>
 				<string key="NSViewClass">View</string>
+				<nil key="NSUserInterfaceItemIdentifier"/>
 				<string key="NSWindowContentMinSize">{320, 240}</string>
 				<object class="NSView" key="NSWindowView" id="568628114">
 					<reference key="NSNextResponder"/>
@@ -72,8 +73,9 @@
 														<object class="NSButton" id="439273918">
 															<reference key="NSNextResponder" ref="771364648"/>
 															<int key="NSvFlags">268</int>
-															<string key="NSFrame">{{0, 261}, {32, 34}}</string>
+															<string key="NSFrame">{{0, 418}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="124652779"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="374602727">
@@ -97,8 +99,9 @@
 														<object class="NSButton" id="858913219">
 															<reference key="NSNextResponder" ref="771364648"/>
 															<int key="NSvFlags">268</int>
-															<string key="NSFrame">{{0, 293}, {32, 34}}</string>
+															<string key="NSFrame">{{0, 450}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="438582917"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="550676989">
@@ -118,8 +121,9 @@
 														<object class="NSButton" id="221403021">
 															<reference key="NSNextResponder" ref="771364648"/>
 															<int key="NSvFlags">268</int>
-															<string key="NSFrame">{{32, 261}, {32, 34}}</string>
+															<string key="NSFrame">{{32, 418}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="271182511"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="88099234">
@@ -139,8 +143,9 @@
 														<object class="NSButton" id="438582917">
 															<reference key="NSNextResponder" ref="771364648"/>
 															<int key="NSvFlags">268</int>
-															<string key="NSFrame">{{32, 309}, {32, 17}}</string>
+															<string key="NSFrame">{{32, 466}, {32, 17}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="439273918"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="483550541">
@@ -164,8 +169,9 @@
 														<object class="NSButton" id="124652779">
 															<reference key="NSNextResponder" ref="771364648"/>
 															<int key="NSvFlags">268</int>
-															<string key="NSFrame">{{32, 293}, {32, 17}}</string>
+															<string key="NSFrame">{{32, 450}, {32, 17}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="221403021"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="475798557">
@@ -185,16 +191,18 @@
 														<object class="NSCustomView" id="271182511">
 															<reference key="NSNextResponder" ref="771364648"/>
 															<int key="NSvFlags">266</int>
-															<string key="NSFrame">{{64, 262}, {426, 64}}</string>
+															<string key="NSFrame">{{64, 419}, {426, 64}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="335001281"/>
 															<string key="NSClassName">MyHScrollView</string>
 														</object>
 														<object class="NSCustomView" id="335001281">
 															<reference key="NSNextResponder" ref="771364648"/>
 															<int key="NSvFlags">276</int>
-															<string key="NSFrameSize">{64, 262}</string>
+															<string key="NSFrameSize">{64, 419}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="245208161"/>
 															<string key="NSClassName">MyVScrollView</string>
 														</object>
@@ -213,19 +221,22 @@
 																				<object class="NSCustomView" id="465732959">
 																					<reference key="NSNextResponder" ref="615534696"/>
 																					<int key="NSvFlags">274</int>
-																					<string key="NSFrameSize">{415, 251}</string>
+																					<string key="NSFrameSize">{426, 419}</string>
 																					<reference key="NSSuperview" ref="615534696"/>
-																					<reference key="NSNextKeyView" ref="303982887"/>
+																					<reference key="NSWindow"/>
+																					<reference key="NSNextKeyView" ref="1031482229"/>
 																					<string key="NSClassName">MyView</string>
 																				</object>
 																			</array>
-																			<string key="NSFrameSize">{415, 251}</string>
+																			<string key="NSFrameSize">{426, 419}</string>
 																			<reference key="NSSuperview" ref="115432387"/>
+																			<reference key="NSWindow"/>
 																			<reference key="NSNextKeyView" ref="465732959"/>
 																		</object>
 																	</array>
-																	<string key="NSFrameSize">{415, 251}</string>
+																	<string key="NSFrameSize">{426, 419}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="615534696"/>
 																	<reference key="NSDocView" ref="615534696"/>
 																	<object class="NSColor" key="NSBGColor" id="407048720">
@@ -242,9 +253,10 @@
 																<object class="NSScroller" id="303982887">
 																	<reference key="NSNextResponder" ref="245208161"/>
 																	<int key="NSvFlags">256</int>
-																	<string key="NSFrame">{{415, 0}, {11, 251}}</string>
+																	<string key="NSFrame">{{415, 0}, {11, 413}}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
-																	<reference key="NSNextKeyView" ref="1031482229"/>
+																	<reference key="NSWindow"/>
+																	<reference key="NSNextKeyView" ref="276230304"/>
 																	<int key="NSsFlags">256</int>
 																	<reference key="NSTarget" ref="245208161"/>
 																	<string key="NSAction">_doScroller:</string>
@@ -254,26 +266,29 @@
 																<object class="NSScroller" id="1031482229">
 																	<reference key="NSNextResponder" ref="245208161"/>
 																	<int key="NSvFlags">256</int>
-																	<string key="NSFrame">{{0, 251}, {415, 11}}</string>
+																	<string key="NSFrame">{{0, 408}, {420, 11}}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
-																	<reference key="NSNextKeyView" ref="276230304"/>
+																	<reference key="NSWindow"/>
+																	<reference key="NSNextKeyView" ref="303982887"/>
 																	<int key="NSsFlags">257</int>
 																	<reference key="NSTarget" ref="245208161"/>
 																	<string key="NSAction">_doScroller:</string>
 																	<double key="NSPercent">0.50602412223815918</double>
 																</object>
 															</array>
-															<string key="NSFrame">{{64, 0}, {426, 262}}</string>
+															<string key="NSFrame">{{64, 0}, {426, 419}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="115432387"/>
-															<int key="NSsFlags">48</int>
+															<int key="NSsFlags">133168</int>
 															<reference key="NSVScroller" ref="303982887"/>
 															<reference key="NSHScroller" ref="1031482229"/>
 															<reference key="NSContentView" ref="115432387"/>
 														</object>
 													</array>
-													<string key="NSFrameSize">{490, 326}</string>
+													<string key="NSFrameSize">{490, 483}</string>
 													<reference key="NSSuperview" ref="969414390"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="858913219"/>
 													<string key="NSClassName">NSView</string>
 												</object>
@@ -286,6 +301,7 @@
 															<int key="NSvFlags">260</int>
 															<string key="NSFrame">{{32, 127}, {32, 32}}</string>
 															<reference key="NSSuperview" ref="276230304"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="452081562"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="569953613">
@@ -307,6 +323,7 @@
 															<int key="NSvFlags">260</int>
 															<string key="NSFrame">{{0, 127}, {32, 32}}</string>
 															<reference key="NSSuperview" ref="276230304"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="689508025"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="455745425">
@@ -336,6 +353,7 @@
 																			<int key="NSvFlags">274</int>
 																			<string key="NSFrameSize">{488, 126}</string>
 																			<reference key="NSSuperview" ref="463231561"/>
+																			<reference key="NSWindow"/>
 																			<reference key="NSNextKeyView" ref="717106582"/>
 																			<string key="NSMinGridSize">{0, 0}</string>
 																			<string key="NSMaxGridSize">{0, 0}</string>
@@ -355,6 +373,7 @@
 																	</array>
 																	<string key="NSFrame">{{1, 1}, {488, 126}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="906795404"/>
 																	<reference key="NSDocView" ref="906795404"/>
 																	<reference key="NSBGColor" ref="407048720"/>
@@ -365,6 +384,7 @@
 																	<int key="NSvFlags">-2147483392</int>
 																	<string key="NSFrame">{{-100, -100}, {15, 143}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="167522541"/>
 																	<reference key="NSTarget" ref="689508025"/>
 																	<string key="NSAction">_doScroller:</string>
@@ -376,6 +396,7 @@
 																	<int key="NSvFlags">-2147483392</int>
 																	<string key="NSFrame">{{-100, -100}, {233, 15}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
+																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="463231561"/>
 																	<int key="NSsFlags">1</int>
 																	<reference key="NSTarget" ref="689508025"/>
@@ -385,27 +406,31 @@
 															</array>
 															<string key="NSFrameSize">{490, 128}</string>
 															<reference key="NSSuperview" ref="276230304"/>
+															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="12926121"/>
-															<int key="NSsFlags">546</int>
+															<int key="NSsFlags">133666</int>
 															<reference key="NSVScroller" ref="12926121"/>
 															<reference key="NSHScroller" ref="167522541"/>
 															<reference key="NSContentView" ref="463231561"/>
 														</object>
 													</array>
-													<string key="NSFrame">{{0, 336}, {490, 157}}</string>
+													<string key="NSFrame">{{0, 493}, {490, 0}}</string>
 													<reference key="NSSuperview" ref="969414390"/>
+													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="731023500"/>
 													<string key="NSClassName">NSView</string>
 												</object>
 											</array>
 											<string key="NSFrameSize">{490, 493}</string>
 											<reference key="NSSuperview" ref="1020549599"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="771364648"/>
 											<int key="NSDividerStyle">3</int>
 										</object>
 									</array>
 									<string key="NSFrameSize">{490, 493}</string>
 									<reference key="NSSuperview" ref="532050384"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="969414390"/>
 									<string key="NSClassName">NSView</string>
 								</object>
@@ -418,18 +443,21 @@
 											<int key="NSvFlags">274</int>
 											<string key="NSFrameSize">{0, 493}</string>
 											<reference key="NSSuperview" ref="452081562"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView"/>
 											<string key="NSClassName">NSView</string>
 										</object>
 									</array>
 									<string key="NSFrame">{{500, 0}, {0, 493}}</string>
 									<reference key="NSSuperview" ref="532050384"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="510901244"/>
 									<string key="NSClassName">NSView</string>
 								</object>
 							</array>
 							<string key="NSFrameSize">{500, 493}</string>
 							<reference key="NSSuperview" ref="568628114"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1020549599"/>
 							<bool key="NSIsVertical">YES</bool>
 							<int key="NSDividerStyle">3</int>
@@ -437,11 +465,13 @@
 					</array>
 					<string key="NSFrameSize">{500, 493}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="532050384"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
 				<string key="NSMinSize">{320, 262}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
 			<object class="NSWindowTemplate" id="464546253">
 				<int key="NSWindowBacking">1</int>
@@ -450,8 +480,9 @@
 				<string key="NSWindowTitle">Window</string>
 				<string key="NSWindowClass">MyLayerWindow</string>
 				<nil key="NSViewClass"/>
+				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="397099299">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSCustomView" id="186698734">
@@ -463,11 +494,11 @@
 						</object>
 					</array>
 					<string key="NSFrameSize">{202, 136}</string>
-					<reference key="NSSuperview"/>
 					<reference key="NSNextKeyView" ref="186698734"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
+				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<bool key="NSWindowIsRestorable">NO</bool>
 			</object>
 			<object class="NSWindowTemplate" id="456788506">
 				<int key="NSWindowBacking">1</int>
@@ -476,8 +507,9 @@
 				<string key="NSWindowTitle">Window</string>
 				<string key="NSWindowClass">MyLayerWindow</string>
 				<nil key="NSViewClass"/>
+				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="953402551">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSCustomView" id="668234819">
@@ -489,11 +521,11 @@
 						</object>
 					</array>
 					<string key="NSFrameSize">{169, 125}</string>
-					<reference key="NSSuperview"/>
 					<reference key="NSNextKeyView" ref="668234819"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
+				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<bool key="NSWindowIsRestorable">NO</bool>
 			</object>
 			<object class="NSCustomObject" id="796877042">
 				<string key="NSClassName">NSApplication</string>
@@ -516,6 +548,7 @@
 						</set>
 						<string key="NSFrame">{{-3, -3}, {126, 126}}</string>
 						<reference key="NSSuperview" ref="817488943"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="364335529">
@@ -532,6 +565,7 @@
 				</array>
 				<string key="NSFrameSize">{120, 120}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="751878084"/>
 			</object>
 			<object class="NSArrayController" id="674351445">
@@ -834,19 +868,19 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: self</string>
+						<string key="label">value: representedObject.image</string>
 						<reference key="source" ref="751878084"/>
 						<reference key="destination" ref="578116863"/>
 						<object class="NSNibBindingConnector" key="connector">
 							<reference key="NSSource" ref="751878084"/>
 							<reference key="NSDestination" ref="578116863"/>
-							<string key="NSLabel">value: self</string>
+							<string key="NSLabel">value: representedObject.image</string>
 							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">self</string>
+							<string key="NSKeyPath">representedObject.image</string>
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
-					<int key="connectionID">100337</int>
+					<int key="connectionID">100351</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1306,7 +1340,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100350</int>
+			<int key="maxID">100351</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
